style: some fix on mobile

--- a/src/client/scss/pages/home.scss
+++ b/src/client/scss/pages/home.scss
@@ -17,6 +17,8 @@
   }
 
   .home-title {
+    margin-top: 4rem;
+
     & > h1 {
       font-size: 42px;
       letter-spacing: 0;
