--- a/src/client/ts/components/Footer/footer.scss
+++ b/src/client/ts/components/Footer/footer.scss
@@ -2,7 +2,12 @@
   text-align: center;
   padding-bottom: 20px;
   width: 100%;
-  font-size: 0.9rem;
+  font-size: 0.7rem;
+  padding-top: 4rem;
+
+  @include sm {
+    font-size: 0.9rem;
+  }
 
   .footer-links {
     display: flex;
