--- a/src/client/ts/components/LangSelector/lang-selector.scss
+++ b/src/client/ts/components/LangSelector/lang-selector.scss
@@ -2,6 +2,13 @@
   position: relative;
   font-size: 12px;
 
+  @media (max-width: #{$screen-md-min}) {
+    .lang-selector-btn {
+      background-color: transparent;
+      box-shadow: none!important;
+    }
+  }
+
   &-btn {
     padding: 8px 11px;
     font-weight: 600;
@@ -17,7 +24,7 @@
     }
 
     .lang-flag {
-      width: 20px;
+      width: 17px;
     }
   }
 
